force-app/main/default/objects/CC_Parametros__mdt/CC_Parametros__mdt.object-meta.xml
<CustomObject>
    <description>Objeto destinado a almacenar parámetros simples para la aplicación.</description>
    <label>Parámetro</label>
    <pluralLabel>Parámetros</pluralLabel>
</CustomObject>