force-app/main/default/objects/CC_Parametros__mdt/fields/CC_AreaCfg__c.field-meta.xml
<CustomField>
    <fullName>CC_AreaCfg__c</fullName>
    <description>Área donde aplica el parámetro de configuración</description>
    <inlineHelpText>Área donde aplica el parámetro de configuración</inlineHelpText>
    <label>Área de la configuración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No aplica</fullName>
                <default>true</default>
                <label>No aplica</label>
            </value>
            <value>
                <fullName>CC_IdiomaChat</fullName>
                <label>Idioma chat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>