force-app/main/default/objects/CC_Parametros__mdt/fields/Valor_Numerico_Entero__c.field-meta.xml
<CustomField>
    <fullName>Valor_Numerico_Entero__c</fullName>
    <description>Valor numérico entero del parámetro</description>
    <label>Valor Numérico Entero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>