force-app/main/default/objects/CC_Parametros__mdt/fields/Valor_Texto__c.field-meta.xml
<CustomField>
    <fullName>Valor_Texto__c</fullName>
    <description>Valor textual del parámetro</description>
    <label>Valor Texto</label>
    <length>80</length>
    <type>Text</type>
</CustomField>