force-app/main/default/objects/CC_Parametros__mdt/listViews/CC_Parametros.listView-meta.xml
<ListView>
    <fullName>CC_Parametros</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Nombre__c</columns>
    <columns>Descriptivo__c</columns>
    <columns>Valor_Numerico_Entero__c</columns>
    <columns>Valor_Texto__c</columns>
    <columns>CC_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Parámetros</label>
</ListView>